@@ -55,13 +55,13 @@ class G4TouchableHistory : public G4VTouchable
 
  public:  // with description
 
-  G4TouchableHistory( const G4NavigationHistory& history );
-  G4TouchableHistory(); 
+  inline G4TouchableHistory( const G4NavigationHistory& history );
+  inline G4TouchableHistory(); 
     // The default constructor produces a touchable-history of 
     // 'zero-depth', ie an "unphysical" and not very unusable one.
     // It is for initialisation only.  
 
- ~G4TouchableHistory();
+  inline ~G4TouchableHistory();
 
   inline G4VPhysicalVolume* GetVolume( G4int depth=0 ) const;
   inline G4VSolid* GetSolid( G4int depth=0 ) const;
