@@ -33,81 +33,3 @@
 #include "G4NavigationLevelRep.hh"
 
 G4ThreadLocal G4Allocator<G4NavigationLevelRep> *aNavigLevelRepAllocator = 0;
-
-// Constructors
-//--------------
-
-G4NavigationLevelRep::G4NavigationLevelRep( G4VPhysicalVolume* pPhysVol,
-                                      const G4AffineTransform& afTransform,
-                                            EVolume            volTp,
-                                            G4int              repNo )
-   :  sTransform(afTransform),
-      sPhysicalVolumePtr(pPhysVol),
-      sReplicaNo(repNo),
-      sVolumeType(volTp),
-      fCountRef(1) 
-{
-}
-
-G4NavigationLevelRep::G4NavigationLevelRep()
-   :  sTransform(),
-      sPhysicalVolumePtr(0),
-      sReplicaNo(-1),
-      sVolumeType(kReplica),
-      fCountRef(1) 
-{
-}
-
-G4NavigationLevelRep::G4NavigationLevelRep( G4VPhysicalVolume* pPhysVol,
-                                      const G4AffineTransform& levelAbove,
-                                      const G4AffineTransform& relativeCurrent,
-                                            EVolume            volTp,
-                                            G4int              repNo )
-   :  sPhysicalVolumePtr(pPhysVol),
-      sReplicaNo(repNo),
-      sVolumeType(volTp),
-      fCountRef(1) 
-{
-  sTransform.InverseProduct( levelAbove, relativeCurrent );
-}
-
-G4NavigationLevelRep::G4NavigationLevelRep( G4NavigationLevelRep& right )
-   :  sTransform(right.sTransform), 
-      sPhysicalVolumePtr(right.sPhysicalVolumePtr),
-      sReplicaNo(right.sReplicaNo),
-      sVolumeType(right.sVolumeType),
-      fCountRef(1) 
-{
-}
-
-// Destructor
-//--------------
-
-G4NavigationLevelRep::~G4NavigationLevelRep()
-{
-#ifdef DEBUG_NAVIG_LEVEL
-  if(fCountRef>0)
-  {
-    G4Exception("G4NavigationLevelRep::~G4NavigationLevelRep()",
-                "GeomVol0003", FatalException,
-                "Deletion of data-level object with positive reference count.");
-  } 
-#endif
-}
-
-// Operators
-// --------------
-
-G4NavigationLevelRep& 
-G4NavigationLevelRep::operator=( const G4NavigationLevelRep &right )
-{
-  if ( &right != this )
-  {
-    sTransform =  right.sTransform;  
-    sPhysicalVolumePtr = right.sPhysicalVolumePtr;
-    sVolumeType = right.sVolumeType;
-    sReplicaNo =  right.sReplicaNo;
-    fCountRef = right.fCountRef;
-  }
-  return *this;
-} 
