@@ -17,9 +17,15 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
-Oct  18th, 2014 A.Dotti                   - geomvol-V10-00-06
+November 3rd, 2014 G.Cosmo                - geomvol-V10-00-07
+- Moved constructors, desctructors and assignment operators for
+  G4NavigationHistory, G4NavigationLevel, G4NavigationLevelRep and
+  G4TouchableHistory to be inline, for CPU optimisation
+  (courtesy of S.Wenzel).
+
+October 18th, 2014 A.Dotti                - geomvol-V10-00-06
 - Corrected possible data race (reported by DRD) in 
-  G4PVReplica::InitialiseWorker 
+  G4PVReplica::InitialiseWorker().
 
 June 11th, 2014 G.Cosmo                   - geomvol-V10-00-05
 - Corrected implementation of copy-constructor and assignment-operator
